Numeric predictor transformation chapter (#6)
* basics on recipes and descriptions of relevant steps for this chapter

* link code color in blocks to in-line

* a little better formatting

* formulas

* update install code

* minor updates

* remove sections now in embeddings

* small additions

* temp remove alpha arg from calibration plots

* general editing

---------

Co-authored-by: ‘topepo’ <‘mxkuhn@gmail.com’>

--- a/includes/aml4td.scss
+++ b/includes/aml4td.scss
@@ -46,8 +46,11 @@ h1, h2, h3, h4 {
   color: $scarlet;
 }
 
-code {
-    color: $blue-screen-o-death;
+code:not(.sourceCode){
+    color: #4758AB;
+    font-size: .95rem;
+    background-color: $whiteblue !important;
+    padding: 0em !important;
 }
 
 span.pkg {  
